<resources>
    <string name="app_name">ShareDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_share_dialog">ShareDialog</string>
    <string name="string_share_info">Share info:</string>
    <string name="string_share_button">Share to</string>
    <string name="string_button_weibo">Weibo</string>
    <string name="string_button_wechat">Wechat</string>
    <string name="string_button_facebook">Facebook</string>
    <string name="string_sharetext_hint">Please input something to share</string>
    <string name="title_activity_about">About</string>
    <string name="string_about">Share info to weibo, wechat. \n\n*Wechat APP_ID is waiting for approval.\n\nLvwind Shaw 2015/06\n\nlvwind.shaw@gmail.com</string>
</resources>
