<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/layout_dialog_share"
    tools:context="com.lvwind.sharedemo.ShareDialog">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_button_weibo"
        android:textAllCaps="false"
        android:id="@+id/btn_share_to_weibo"
        android:drawableLeft="@drawable/icon_share_weibo_normal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_button_wechat"
        android:textAllCaps="false"
        android:id="@+id/btn_share_to_wechat"
        android:drawableLeft="@drawable/icon_share_wechat_nornal"
        android:singleLine="false"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_button_facebook"
        android:textAllCaps="false"
        android:id="@+id/btn_share_to_fb"
        android:singleLine="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
